force-app/main/default/objects/Application__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>