force-app/main/default/objects/Application__c/fields/JobAdvertisement__c.field-meta.xml
<CustomField>
    <fullName>JobAdvertisement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobAdvertisement</label>
    <referenceTo>JobAdvertisement__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>